# fcpw

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CUDA_BACKEND.md  Changes.md  README.md  pyproject.toml  roadmap.txt  todo.txt
.github/workflows/: wheels.yml
accelerators/: baseline.h  baseline.inl  bvh.h  bvh.inl  bvh.inl.orig  bvh_common.h  bvh_simd.h  bvh_simd.inl  bvh_simd_common.h  embree_bvh.h  embree_bvh.inl  mbvh.h  mbvh.inl  qbvh.h  qbvh.inl  sbvh.h  sbvh.inl  sbvh_simd.h  sbvh_simd.inl  simd.h
aggregates/: csg_node.h  mbvh.h  mbvh.inl  sbvh.h  sbvh.inl
constructive-solid-geometry/: node.h  node.inl
core/: bounding_volumes.h  core.h  csg_node.h  csg_node.inl  interaction.h  primitive.h  ray.h  shape.h  vector_operations.h  wide_query_operations.h
demos/: CMakeLists.txt  demo.cpp  demo.py
geometry/: line_segments.cpp  line_segments.h  polygon_soup.h  triangles.cpp  triangles.h
include/fcpw/: fcpw.h  fcpw.inl  fcpw_cuda.h  fcpw_cuda.inl  fcpw_gpu.h  fcpw_gpu.inl
include/fcpw/aggregates/: baseline.h  baseline.inl  bvh.h  bvh.inl  csg_node.h  csg_node.inl  mbvh.h  mbvh.inl  sbvh.h  sbvh.inl
include/fcpw/core/: bounding_volumes.h  core.h  interaction.h  primitive.h  ray.h  vector_operations.h  wide_query_operations.h
include/fcpw/cuda/: README.md  bvh_interop_structures.h  cuda_bvh_device.cuh  cuda_interop_structures.h  cuda_kernels.cu  cuda_kernels.h  cuda_runtime_utils.h  cuda_types.h  fcpw_cuda_kernels.cu  fcpw_cuda_kernels.h
include/fcpw/geometry/: edge_silhouettes.h  edge_silhouettes.inl  line_segments.h  line_segments.inl  points.h  points.inl  polygon_soup.h  quads.h  quads.inl  silhouette_edges.h  silhouette_edges.inl  silhouette_vertices.h  silhouette_vertices.inl  triangles.h  triangles.inl  vertex_silhouettes.h  vertex_silhouettes.inl
include/fcpw/gpu/: aggregate.slang  bounding-volumes.slang  bvh-node.slang  bvh-refit.cs.slang  bvh-traversal.cs.slang  bvh.cs.slang  bvh.slang  bvh_commands.h  bvh_interop_structures.h  geometry.slang  interaction.slang  math-constants.slang  ray.slang  slang_gfx_utils.h  slang_rhi_utils.h  soa.slang  structure-of-arrays.slang  transform.slang
include/fcpw/gpu/cuda/: cuda_bounding_volumes.cuh  cuda_bvh_kernels.cu  cuda_bvh_kernels.cuh  cuda_bvh_traversal.cuh  cuda_geometry.cuh  cuda_interop_structures.h  cuda_utils.cpp  cuda_utils.h
include/fcpw/utilities/: intersection.h  scene_data.h  scene_data.inl  scene_loader.h  scene_loader.inl
input/: csg.txt  instances3d.txt
python/: CMakeLists.txt  fcpw_bindings.cpp  fcpw_py.cpp
python/fcpw/: __init__.py
test/: CMakeLists.txt  aggregate_tests.cpp  commands.txt  embree_bvh.inl
test/input/: instances2d.txt
tests/: CMakeLists.txt  aggregate_tests.cpp  bb_test.cpp  bench_all.bat  bench_all.sh  command.txt  commands.txt  cpq_tests.cpp  csg_tests.cpp  cuda_tests.cpp  embree_bvh.h  embree_bvh.inl  fcpw_tests.py  gen_all_graphs.sh  gen_graphs.sh  gen_thread_scaling_graphs.sh  geometry_tests.cpp  gpu_tests.cpp  gpu_watertight_tests.cpp  graph.py  int_tests.cpp  obb_test.cpp  watertight_tests.cpp
tests/output/: armadillo.txt  buddha.txt  bunny.txt  hairball.txt  kitten.txt  powerplant.txt  spiral.txt  sponza.txt
utilities/: fcpw.h  fcpw.inl  file_io.cpp  file_io.h  file_io.inl  scene.h  scene.inl  scene.inl.orig  scene_data.h  scene_data.inl  scene_loader.cpp  scene_loader.h  scene_loader.inl  scene_loading.h
